-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11.0.9
-
Component/s: core-svc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8252478 | 11.0.10-oracle | Daniil Titov | P2 | Closed | Fixed | b01 |
The backport of JDK-8231209 added a new method, jmm_GetOneThreadAllocatedMemory, to the jmm_interface, which breaks previously compiled binaries that reference the updated interface. See hotspot/share/include/jmm.h.
The fix is to use one of the reserved jmm_interface slots, say reserved2, for jmm_GetOneThreadAllocatedMemory. Choose reserved2 in anticipation of jdk8uJDK-8185003 backport wanting reserved6 for a new DumpThreadsMaxDepth entry.
The fix is to use one of the reserved jmm_interface slots, say reserved2, for jmm_GetOneThreadAllocatedMemory. Choose reserved2 in anticipation of jdk8u
- backported by
-
JDK-8252478 JDK-8231209 11u backport breaks jmm binary compatibility
-
- Closed
-