8252157: JDK-8231209 11u backport breaks jmm binary compatibility Summary: Move jmm_GetOneThreadAllocatedMemory to reserved_2 jmm_interface slot Reviewed-by: simonis, clanger